.ibm/pipelines/cluster/eks/manifest/eks-operator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dh-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $EKS_DOMAIN_NAME_CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: $EKS_INSTANCE_DOMAIN_NAME
spec:
  ingressClassName: alb
  rules:
    - host: $EKS_INSTANCE_DOMAIN_NAME
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: developer-hub-dh-ingress
              port:
                name: http-backend
